fix siz of product buttons on mobile, & session login responsive

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -36,8 +36,8 @@ html, body {
       margin: 40px auto;
       position: relative;
       display: inline-block;
-      max-width: 700px;
-      min-width: 500px;
+      max-width: 100vw;
+      // min-width: 500px;
       padding: 25px 25px;
       border-radius: 40px;
       // margin: 5px 0;
@@ -92,7 +92,7 @@ html, body {
         border: 0.6px solid $clear-red;
         line-height: 0;
         font-size: 17px;
-        width: 100%;
+        // width: 100%;
         display: block;
         padding: 10px 15px;
         border-radius: 60px;
@@ -320,3 +320,5 @@ html, body {
 
   }
 }
+
+
